# pb/get_device_by_endpoint.pb.go
@@ -1,0 +1,154 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.27.1
+// 	protoc        v3.17.3
+// source: github.com/plgd-dev/client-application/pb/get_device_by_endpoint.proto
+
+package pb
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type GetDeviceByEndpointRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	// Endpoint can be in format:
+	// - coap://<host>:<port> or coaps://<host>:<port>
+	// - coap+tcp://<host>:<port> or coaps+tcp://<host>:<port>
+	// - <host>:<port> is interpreted as coap://<host>:<port>
+	// - <host> is interpreted as coap://<host>:5683
+	Endpoint string `protobuf:"bytes,1,opt,name=endpoint,proto3" json:"endpoint,omitempty"`
+}
+
+func (x *GetDeviceByEndpointRequest) Reset() {
+	*x = GetDeviceByEndpointRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetDeviceByEndpointRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetDeviceByEndpointRequest) ProtoMessage() {}
+
+func (x *GetDeviceByEndpointRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetDeviceByEndpointRequest.ProtoReflect.Descriptor instead.
+func (*GetDeviceByEndpointRequest) Descriptor() ([]byte, []int) {
+	return file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GetDeviceByEndpointRequest) GetEndpoint() string {
+	if x != nil {
+		return x.Endpoint
+	}
+	return ""
+}
+
+var File_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto protoreflect.FileDescriptor
+
+var file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDesc = []byte{
+	0x0a, 0x46, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x70, 0x6c, 0x67,
+	0x64, 0x2d, 0x64, 0x65, 0x76, 0x2f, 0x63, 0x6c, 0x69, 0x65, 0x6e, 0x74, 0x2d, 0x61, 0x70, 0x70,
+	0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x70, 0x62, 0x2f, 0x67, 0x65, 0x74, 0x5f,
+	0x64, 0x65, 0x76, 0x69, 0x63, 0x65, 0x5f, 0x62, 0x79, 0x5f, 0x65, 0x6e, 0x64, 0x70, 0x6f, 0x69,
+	0x6e, 0x74, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x0a, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63,
+	0x65, 0x2e, 0x70, 0x62, 0x22, 0x38, 0x0a, 0x1a, 0x47, 0x65, 0x74, 0x44, 0x65, 0x76, 0x69, 0x63,
+	0x65, 0x42, 0x79, 0x45, 0x6e, 0x64, 0x70, 0x6f, 0x69, 0x6e, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65,
+	0x73, 0x74, 0x12, 0x1a, 0x0a, 0x08, 0x65, 0x6e, 0x64, 0x70, 0x6f, 0x69, 0x6e, 0x74, 0x18, 0x01,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x65, 0x6e, 0x64, 0x70, 0x6f, 0x69, 0x6e, 0x74, 0x42, 0x2e,
+	0x5a, 0x2c, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x70, 0x6c, 0x67,
+	0x64, 0x2d, 0x64, 0x65, 0x76, 0x2f, 0x63, 0x6c, 0x69, 0x65, 0x6e, 0x74, 0x2d, 0x61, 0x70, 0x70,
+	0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x70, 0x62, 0x3b, 0x70, 0x62, 0x62, 0x06,
+	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDescOnce sync.Once
+	file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDescData = file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDesc
+)
+
+func file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDescGZIP() []byte {
+	file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDescOnce.Do(func() {
+		file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDescData = protoimpl.X.CompressGZIP(file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDescData)
+	})
+	return file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDescData
+}
+
+var file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_goTypes = []interface{}{
+	(*GetDeviceByEndpointRequest)(nil), // 0: service.pb.GetDeviceByEndpointRequest
+}
+var file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_init() }
+func file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_init() {
+	if File_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*GetDeviceByEndpointRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_goTypes,
+		DependencyIndexes: file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_depIdxs,
+		MessageInfos:      file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_msgTypes,
+	}.Build()
+	File_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto = out.File
+	file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_rawDesc = nil
+	file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_goTypes = nil
+	file_github_com_plgd_dev_client_application_pb_get_device_by_endpoint_proto_depIdxs = nil
+}
